--- a/MoviesApp/Scenes/Screens/Home/HomeView.xib
+++ b/MoviesApp/Scenes/Screens/Home/HomeView.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeView" customModule="MoviesApp" customModuleProvider="target">
             <connections>
+                <outlet property="activity" destination="Ssh-Hr-KJe" id="Kjg-op-IfB"/>
+                <outlet property="tableView" destination="fMh-4U-JqW" id="MO6-R0-z4J"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,20 +21,32 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HomeView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DC-iW-zIn">
-                    <rect key="frame" x="176" y="326" width="82" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fMh-4U-JqW">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Ssh-Hr-KJe">
+                    <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                    <color key="color" name="AccentColor"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="139" y="96"/>
+            <constraints>
+                <constraint firstItem="Ssh-Hr-KJe" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="BZS-R8-KIH"/>
+                <constraint firstItem="fMh-4U-JqW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MU2-tA-Fxw"/>
+                <constraint firstAttribute="bottom" secondItem="fMh-4U-JqW" secondAttribute="bottom" id="aHO-WU-hwb"/>
+                <constraint firstItem="fMh-4U-JqW" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lxx-qH-V7p"/>
+                <constraint firstItem="fMh-4U-JqW" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="wyd-JU-Grp"/>
+                <constraint firstItem="Ssh-Hr-KJe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ybS-tF-4vd"/>
+            </constraints>
+            <point key="canvasLocation" x="137.68115942028987" y="95.758928571428569"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
